- fix border shadow on mobile for news cards - remove scroll bar on carousel

--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,15 @@
 }
 
 
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE & Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none; /* Safari & Chrome */
+}
+
 /* Base reset */
 html,
 body {
